# thor-viewer

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  live-temp.md  main.py  pyproject.toml
scripts/: build_app.py  debug_camera_device.py  read_live_temp_packet.py  read_radiometric_jpeg.py  thor_mtp.py
src/thor_viewer/: app.py
src/thor_viewer/assets/lucide/: LICENSE
src/thor_viewer/backend/: camera.py  live_temperature.py  live_temperature_capture.py  mtp_storage.py  radiometric_jpeg.py  recorder.py  temperature_provider.py  usbpcap_temperature_capture.py
src/thor_viewer/config/: settings.py
src/thor_viewer/gui/: icons.py  main_window.py  radiometric_image_viewer.py  storage_browser.py  theme.py
src/thor_viewer/processing/: overlays.py
tests/: test_app_metadata.py  test_build_app.py  test_camera_detection.py  test_icons.py  test_live_temperature.py  test_mtp_storage.py  test_storage_export.py  test_ui_state.py  test_uvc_camera.py
